New Crowdin updates (#2)
* New translations app_en.arb (Romanian)

* New translations app_en.arb (French)

* New translations app_en.arb (Spanish)

* New translations app_en.arb (Afrikaans)

* New translations app_en.arb (Arabic)

* New translations app_en.arb (Catalan)

* New translations app_en.arb (Czech)

* New translations app_en.arb (Danish)

* New translations app_en.arb (German)

* New translations app_en.arb (Greek)

* New translations app_en.arb (Finnish)

* New translations app_en.arb (Hebrew)

* New translations app_en.arb (Hungarian)

* New translations app_en.arb (Italian)

* New translations app_en.arb (Japanese)

* New translations app_en.arb (Korean)

* New translations app_en.arb (Dutch)

* New translations app_en.arb (Norwegian)

* New translations app_en.arb (Polish)

* New translations app_en.arb (Portuguese)

* New translations app_en.arb (Russian)

* New translations app_en.arb (Serbian (Cyrillic))

* New translations app_en.arb (Swedish)

* New translations app_en.arb (Turkish)

* New translations app_en.arb (Ukrainian)

* New translations app_en.arb (Chinese Simplified)

* New translations app_en.arb (Chinese Traditional)

* New translations app_en.arb (Vietnamese)

* New translations app_en.arb (Portuguese, Brazilian)

--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,8 +1,8 @@
 {
-  "@@locale": "es-ES",
+  "@@locale": "it",
   "about": "About",
   "apksToApk": "APKS to APK",
-  "appDescription": "Una colección de herramientas de ingeniería inversa.",
+  "appDescription": "A collection of reverse engineering tools.",
   "appTitle": "RevEngi",
   "batteryOptimization": "Battery Optimization",
   "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
@@ -16,7 +16,7 @@
   "flutterAnalysisDesc": "Analyze Flutter libs",
   "jniAnalysis": "JNI Analysis",
   "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Idioma: {languageCode}",
+  "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -26,19 +26,19 @@
       }
     }
   },
-  "later": "Luego",
+  "later": "Later",
   "mergeSplitApks": "Merge Split APKs",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generate MT Enhanced Hooks",
   "ok": "Ok",
   "ollama_api_url": "OLLAMA base URL",
-  "preferences": "Preferencias",
-  "profile": "Perfil",
+  "preferences": "Preferences",
+  "profile": "Profile",
   "reset": "Reset",
-  "selectLanguage": "Seleccionar idioma",
+  "selectLanguage": "Select Language",
   "smaliGrammar": "Smali Grammar",
-  "theme": "Tema",
+  "theme": "Theme",
   "update": "Update",
-  "updateAvailable": "Actualización disponible",
-  "updateAvailableMessage": "Hay una nueva versión de la aplicación disponible. ¿Quieres actualizar ahora?"
+  "updateAvailable": "Update Available",
+  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?"
 }
