localise profile & login screen

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,7 @@
 {
   "about": "عن",
+  "apiKey": "API Key",
+  "apiRateLimits": "API Endpoints Rate Limits",
   "apksToApk": "APKS إلى APK",
   "appDescription": "مجموعة من أدوات الهندسة العكسية.",
   "appTitle": "Revengi",
@@ -9,8 +11,17 @@
   "blutterDesc": "أداة التحليل الثنائي رفرفة",
   "cancel": "يلغي",
   "checkForUpdate": "تحقق للحصول على التحديثات",
+  "confirmPassword": "Confirm Password",
+  "continueAsGuest": "Continue as Guest",
+  "copiedToClipboard": "Copied to clipboard",
+  "createAccount": "Create Account",
   "dexRepair": "إصلاح DEX",
   "dexRepairDesc": "إصلاح ملفات DEX",
+  "email": "Email",
+  "emailCond": "Please enter a valid Gmail address",
+  "enterEmail": "Please enter email",
+  "enterPassword": "Please enter password",
+  "enterUsername": "Please enter username",
   "flutterAnalysis": "تحليل الرفرفة",
   "flutterAnalysisDesc": "تحليل libs رفرفة",
   "jniAnalysis": "تحليل JNI",
@@ -26,18 +37,30 @@
     }
   },
   "later": "لاحقاً",
+  "login": "Login",
   "mergeSplitApks": "دمج انقسام APKs",
   "mtHook": "هوك",
   "mtHookDesc": "توليد خطافات محسنة MT",
   "ok": "نعم",
   "ollama_api_url": "عنوان ULLAMA BASE URL",
+  "passLen": "Password must be at least 8 characters",
+  "passMisMatch": "Passwords do not match",
+  "password": "Password",
+  "pleaseConfirmPassword": "Please confirm password",
   "preferences": "التفضيلات",
   "profile": "حساب تعريفي",
+  "register": "Register",
   "reset": "إعادة ضبط",
   "selectLanguage": "حدد اللغة",
   "smaliGrammar": "قواعد سميلي",
+  "suggestLogin": "Have an account? Login",
+  "suggestRegister": "Need an account? Register",
   "theme": "سمة",
   "update": "تحديث",
   "updateAvailable": "التحديث المتاح",
-  "updateAvailableMessage": "يتوفر إصدار جديد من التطبيق.هل ترغب في التحديث الآن؟"
+  "updateAvailableMessage": "يتوفر إصدار جديد من التطبيق.هل ترغب في التحديث الآن؟",
+  "username": "Username",
+  "usernameCond": "Username can only contain letters, numbers, and underscore",
+  "usernameLimit": "Username must be between 5 and 15 characters",
+  "welcomeBack": "Welcome Back!"
 }
