--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,5 +1,7 @@
 {
   "about": "About",
+  "apiKey": "API Key",
+  "apiRateLimits": "API Endpoints Rate Limits",
   "apksToApk": "APKS to APK",
   "appDescription": "Una colección de herramientas de ingeniería inversa.",
   "appTitle": "RevEngi",
@@ -9,8 +11,17 @@
   "blutterDesc": "Flutter binary analysis tool",
   "cancel": "Cancel",
   "checkForUpdate": "Check for Updates",
+  "confirmPassword": "Confirm Password",
+  "continueAsGuest": "Continue as Guest",
+  "copiedToClipboard": "Copied to clipboard",
+  "createAccount": "Create Account",
   "dexRepair": "Dex Repair",
   "dexRepairDesc": "Repair DEX files",
+  "email": "Email",
+  "emailCond": "Please enter a valid Gmail address",
+  "enterEmail": "Please enter email",
+  "enterPassword": "Please enter password",
+  "enterUsername": "Please enter username",
   "flutterAnalysis": "Flutter Analysis",
   "flutterAnalysisDesc": "Analyze Flutter libs",
   "jniAnalysis": "JNI Analysis",
@@ -26,18 +37,30 @@
     }
   },
   "later": "Luego",
+  "login": "Login",
   "mergeSplitApks": "Merge Split APKs",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generate MT Enhanced Hooks",
   "ok": "Ok",
   "ollama_api_url": "OLLAMA base URL",
+  "passLen": "Password must be at least 8 characters",
+  "passMisMatch": "Passwords do not match",
+  "password": "Password",
+  "pleaseConfirmPassword": "Please confirm password",
   "preferences": "Preferencias",
   "profile": "Perfil",
+  "register": "Register",
   "reset": "Reset",
   "selectLanguage": "Seleccionar idioma",
   "smaliGrammar": "Smali Grammar",
+  "suggestLogin": "Have an account? Login",
+  "suggestRegister": "Need an account? Register",
   "theme": "Tema",
   "update": "Update",
   "updateAvailable": "Actualización disponible",
-  "updateAvailableMessage": "Hay una nueva versión de la aplicación disponible. ¿Quieres actualizar ahora?"
+  "updateAvailableMessage": "Hay una nueva versión de la aplicación disponible. ¿Quieres actualizar ahora?",
+  "username": "Username",
+  "usernameCond": "Username can only contain letters, numbers, and underscore",
+  "usernameLimit": "Username must be between 5 and 15 characters",
+  "welcomeBack": "Welcome Back!"
 }
